# openeb_ros2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: default.yaml
include/openeb_ros2/: driver_component.hpp  preprocessor_component.hpp
launch/: composed.launch.py  driver.launch.py  pipeline.launch.py
src/: driver_component.cpp  driver_node.cpp  preprocessor_component.cpp  preprocessor_node.cpp
